--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
     opacity: 0.7;
   }
   .person:hover {
-    border-color: #f1f1f1;
+    border-color: #1692da;
   }
 .carousel-inner img {
     -webkit-filter: grayscale(0%);
