--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@
 .carousel-inner img {
     -webkit-filter: grayscale(0%);
     filter: grayscale(0%); 
-    width: cover !important; 
+    width: 100% !important; 
     margin: auto;
   }
   
